efeitos de botoes adicionados

--- a/index.html
+++ b/index.html
@@ -46,5 +46,7 @@
         <footer>
             <p>&copy; Desenvolvido por <a href="https://www.linkedin.com/in/caique-rodrigues-a113ab249/" target="_blank">Caique Rodrigues</a></p>
         </footer>
+
+        <script src="_script/script.js"></script>
     </body>
 </html>
